Suppress 0s in monitoring pane rows
Do not set value to 0 and do not add rows without non-zero value.
Also fix javascript in template to avoid coloring 'No items to display.'

With the following rules:
$ openstack congress policy rule create action 'warning(x) :- blah(x)'
$ openstack congress policy rule create classification 'blah(x) :- error(x)'

Monitoring pane pre-patch shows rows of zero warning/error
screenshot: https://imagebin.ca/v/3VXCVtZxXYUQ

rows suppressed post-patch.
screenshot: https://imagebin.ca/v/3VXX9g34QOGf

Closes-Bug: 1708294

Change-Id: I56adc4da430e3e1e15bd31c42fe3f7bce996dcd0

--- a/congress_dashboard/monitoring/templates/monitoring/index.html
+++ b/congress_dashboard/monitoring/templates/monitoring/index.html
@@ -31,16 +31,18 @@
     {{ monitoring_table.render }}
   </div>
   <script type="text/javascript">
-  // color none 0 errors/warnings red/yellow
+  // color non-zero errors/warnings red/yellow
   table_rows = document.getElementById("monitoring").childNodes[5];
   num_rows = (table_rows.childNodes.length - 1)/2;
   for (i = 0; i < num_rows; i++) {
     row = table_rows.childNodes[1 + 2*i];
-    if (row.childNodes[1].innerHTML.trim() != "-") {
-      row.childNodes[1].style.backgroundColor = "rgba(255, 0, 0, 0.5)";
-    }
-    if (row.childNodes[2].innerHTML.trim() != "-") {
-      row.childNodes[2].style.backgroundColor = "rgba(255, 255, 0, 0.5)";
+    if (row.className != "odd empty") {  // ignore the row indicating no items
+      if (row.childNodes[1].innerHTML.trim() != "-") {
+        row.childNodes[1].style.backgroundColor = "rgba(255, 0, 0, 0.5)";
+      }
+      if (row.childNodes[2].innerHTML.trim() != "-") {
+        row.childNodes[2].style.backgroundColor = "rgba(255, 255, 0, 0.5)";
+      }
     }
   }
   </script>
